--- a/tcg_companion/requirements.txt
+++ b/tcg_companion/requirements.txt
@@ -32,6 +32,7 @@ pyasn1_modules==0.4.2
 pydantic==2.11.4
 pydantic_core==2.33.2
 pyparsing==3.2.3
+python-dotenv==1.1.1
 requests==2.32.3
 rsa==4.9.1
 setuptools==69.0.3
